[gd_scene load_steps=13 format=3 uid="uid://7cimeif8h4fg"]

[ext_resource type="Script" path="res://scripts/mobs/dryad.gd" id="1_n7fse"]
[ext_resource type="Texture2D" uid="uid://dmavqbjl1s1v3" path="res://assets/Bullet-Hell-Assets/monster sprites/dryad.png" id="2_7huwi"]
[ext_resource type="Texture2D" uid="uid://cxvjwwmlg0ay7" path="res://assets/Bullet-Hell-Assets/enemy death animation/enemy_death_0.png" id="3_jd6ac"]
[ext_resource type="Texture2D" uid="uid://dlfl18ao0lkfw" path="res://assets/Bullet-Hell-Assets/enemy death animation/enemy_death_1.png" id="4_7l88c"]
[ext_resource type="Texture2D" uid="uid://c70i534x7eway" path="res://assets/Bullet-Hell-Assets/enemy death animation/enemy_death_2.png" id="5_ct7n3"]
[ext_resource type="Texture2D" uid="uid://nfrwrc8au5g0" path="res://assets/Bullet-Hell-Assets/enemy death animation/enemy_death_3.png" id="6_wsfdc"]
[ext_resource type="Script" path="res://scripts/mobs/dryad_bullet_pool.gd" id="7_q7b6c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8m8k"]
size = Vector2(7, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ibuc"]
bg_color = Color(0.844092, 0, 0.00770901, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahs61"]
bg_color = Color(0, 0.729412, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_cee43"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jd6ac")
}, {
"duration": 1.0,
"texture": ExtResource("4_7l88c")
}, {
"duration": 1.0,
"texture": ExtResource("5_ct7n3")
}, {
"duration": 1.0,
"texture": ExtResource("6_wsfdc")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk15d"]
size = Vector2(10, 24)

[node name="Dryad" type="CharacterBody2D"]
script = ExtResource("1_n7fse")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7huwi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-1.5, -1.5)
shape = SubResource("RectangleShape2D_e8m8k")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -13.0
offset_top = -22.0
offset_right = 11.0
offset_bottom = -16.0
theme_override_styles/background = SubResource("StyleBoxFlat_3ibuc")
theme_override_styles/fill = SubResource("StyleBoxFlat_ahs61")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="DeathAnimation" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_cee43")
animation = &"death"
frame = 1
frame_progress = 0.225902

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_dk15d")

[node name="Bullets" type="Node" parent="."]
script = ExtResource("7_q7b6c")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-12, 1)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
